.406
  - Fix for detection of missing RCS binaries

.405
  - Accept per-class db credentials
  - Fix for DateTime instantiation from zero values
  - PostgreSQL support actually works now
  - DB-specific delegate methods are now handled by AUTOLOAD

.404
  - Update documentation for usage under mod_perl (thx rrose)
  - Use default memcached port by uh, default.
  - Remove Time::Piece as dependency
  - MySQL reference options: onDelete and onUpdate renamed to
    deleteRefOpt and updateRefOpt
  - Lots of perldoc revisions and fixes

.403
  - Modify die() handler to not hork on non-Error objects
  - Require 5.8.8+ in Makefile.PL and Ladybug.pm
  - Update installation docs, added short summary document (TLDR)
  - Backing store detection now uses creds from .ladybugrc (thx rrose)

.402
  - Re-work fix for self-ref tables

.401
  - Fix problem w/self-referential tables and add test case
  - Rewrote docs for ExtID and included several examples

.399_xxx
  - Rename project from OP to Devel::Ladybug
  - Remove deps and update dep versions
  - Disabled RCS support on OpenBSD for now

2009-10-17: .319
  - Add support + tests for PostgreSQL
  - Fixed ExtID support for non-InnoDB-backed classes + added tests
  - Cleaned up auto-detection, removed duplicate test code
  - Leaving dbPort undef (~) in .oprc will make OP use default port for
    specified dbi type
  - Add foreign key support for future versions of DBD::SQLite
  - Type::allowed($value) now returns true or throws an exception

2009-10-14: .318
  - Add support for cross-database foreign keys (just assert ExtID as usual)
  - Non-InnoDB classes won't try to use InnoDB for their linked tables (oops)
  - Run with hardcoded defaults if .oprc is not found
  - Automatically choose the "best" available backing store type
    on the local system, if no explicit __useYaml, __useDbi, or __dbiType
    values were given for a class
  - OP::Persistence - __selectBool(), __selectSingle() and __selectMulti()